# dioxus-hacker-news

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  package.json  pnpm-lock.yaml  tailwind.config.js
assets/css/: global.css
src/: components.rs  hacker_news_client.rs  layouts.rs  main.rs  page.rs  types.rs
src/components/: navi.rs  story_list.rs
src/layouts/: default_layout.rs
src/page/: home.rs  news.rs  not_found.rs
