[package]
name = "dioxus-hacker-news"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.0"
dioxus-router = "0.4.1"
dioxus-web = "0.4.0"
futures = "0.3.29"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
dioxus-logger = "0.4.1"
log = "0.4.20"
url = "2.4.1"
chrono = { version = "0.4.31", features = ["serde"] }
